--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>GFG</title>
 </head>
 <body>
-    <h1>MEet U there restaurant.</h1>
+    <h1>MEet U there restaurant and Travel Companion Chatbot</h1>
     <h6> - vaishu </h6>
-
+<section>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
@@ -17,5 +17,17 @@
   agent-id="ef8337a2-c1a6-4eea-8e6e-5497a4a047eb"
   language-code="en"
 ></df-messenger>
+</section>
+
+<section>
+
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Meet"
+  agent-id="c5c97394-37c0-44ca-90fb-b0aa2e0994f0"
+  language-code="en"
+></df-messenger>
+</section>
 </body>
 </html>
