--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GFG</title>
+    <title>CHATBOT</title>
 </head>
-<body>
-    <h1>MEet U there restaurant.</h1>
-    <h6> - vaishu </h6>
 
+<style type=text/css>
+
+ 
+div
+{
+  color: white;
+  background-color: 009900;
+  margin: 5px;
+  font-size: 25px;
+}
+</style>
+
+<body>
+
+    <div>
+    <h1>MEet U there restaurant and Travel Companion Chatbot</h1>
+    <h6> - vaishu </h6>
+</div>
+<div>
 <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   intent="WELCOME"
@@ -17,5 +33,15 @@
   agent-id="ef8337a2-c1a6-4eea-8e6e-5497a4a047eb"
   language-code="en"
 ></df-messenger>
+</div>
+<div>
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Meet"
+  agent-id="c5c97394-37c0-44ca-90fb-b0aa2e0994f0"
+  language-code="en"
+></df-messenger>
+</div>
 </body>
 </html>
