--- a/index.html
+++ b/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHATBOT</title>
-</head>
-
-<style type=text/css>
-
- 
-div
-{
-  color: white;
-  background-color: 009900;
-  margin: 5px;
-  font-size: 25px;
-}
-</style>
-
-<body>
-<<<<<<< HEAD
-
-    <div>
-    <h1>MEet U there restaurant and Travel Companion Chatbot</h1>
-    <h6> - vaishu </h6>
-</div>
-<div>
-=======
-    <h1>MEet U there restaurant and Travel Companion Chatbot</h1>
-    <h6> - vaishu </h6>
-<section>
->>>>>>> b2ff8d49f8eb9f2666f4fcf19a6a1e85de729d07
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="MEet_U_thereBOT"
-  agent-id="ef8337a2-c1a6-4eea-8e6e-5497a4a047eb"
-  language-code="en"
-></df-messenger>
-<<<<<<< HEAD
-</div>
-<div>
-=======
-</section>
-
-<section>
-
->>>>>>> b2ff8d49f8eb9f2666f4fcf19a6a1e85de729d07
-<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  intent="WELCOME"
-  chat-title="Meet"
-  agent-id="c5c97394-37c0-44ca-90fb-b0aa2e0994f0"
-  language-code="en"
-></df-messenger>
-<<<<<<< HEAD
-</div>
-=======
-</section>
->>>>>>> b2ff8d49f8eb9f2666f4fcf19a6a1e85de729d07
-</body>
-</html>
+<h1> Hi this is main page </h1>
